# angortplugins

./: CMakeLists.txt  README.md  base.sh  buildall  clean  doc.tex  hashgets.h  install  makedoc  maketex.ang  reallybuildall  wrappers.h
array/: array.cpp  build
catmullrom/: catmullrom.cpp  catmullrom.hpp
cmake/: macros.cmake
colours/: colours.cpp
csv/: build  csv.cpp  test.ang
curl/: build  curl.cpp  prog.ang  prog.php  prog.sql  test.ang
curses/: build  curses.cpp  flocate  words.tex
curses/utils/: window.ang
cv/: cv.cpp  timercam.ang
diamond/: build  diamond.cpp
example_complex/: build  complex.cpp
example_hello/: build  hello.cpp
id3/: id3.cpp
io/: build  io.cpp  test.ang
json/: build  json.cpp
kbspline/: kbspline.cpp  kbspline.hpp
midi/: build  midi.cpp
mpc/: build  buildid3  buildmpc  mpc  mpc.cpp
mpd/: mpc  mpd.cpp
noise/: build  noise.cpp
opts/: NOTES
osc/: build  osc.cpp
png/: build  png.cpp  solarize.bdf  test.ang
png/nvbdflib-1.0/: Makefile  README.txt  bdfbanner.c  nvbdflib.h
regex/: build  regex.cpp
sdl/: build  clock.ang  font.h  joy.h  sdl.cpp  surface.h  test.ang  texture.h
sdl/utils/: sdlutils.ang
serial/: build  serial.cpp
sys/: build  sys.cpp
thread/: thread.cpp
time/: build  time.cpp
udp/: build  udp.cpp  udpclient.cpp  udpclient.h
vector2d/: build  test.ang  vector2d.cpp  vector2d.h
yaml/: yaml.cpp
